feat: accept null speed and heading
